--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/logging.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/logging.html
@@ -4,4 +4,9 @@
 	</div>
 </div>
 
+<label>Download</label>
 <iframe src="../../logging"></iframe>
+
+<!-- <button class="btn-primary" onclick="document.getElementById('log-console').contentWindow.location.reload();">Reload</button> -->
+<label>Log Console</label>
+<iframe id="log-console" src="templates/monitoring/logging/log.html"></iframe>
