separation of app logs and log console pages

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/logging.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/logging.html
@@ -7,6 +7,5 @@
 <label>Download</label>
 <iframe src="../../logging"></iframe>
 
-<!-- <button class="btn-primary" onclick="document.getElementById('log-console').contentWindow.location.reload();">Reload</button> -->
 <label>Log Console</label>
-<iframe id="log-console" src="templates/monitoring/logging/log.html"></iframe>
+<a href="index.html#/monitoring/log-console">Real-time logs</a>
