wss support fix

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/log.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/log.html
@@ -12,7 +12,8 @@
 <script>
 var connectToLog = function() {
 	try {
-		var logSocket = new WebSocket("ws://" + window.location.host + "/log");
+		var logSocket = new WebSocket(((location.protocol === 'https:') ? "wss://" : "ws://") 
+				+ window.location.host + "/log");
 	} catch(e) {
 		document.writeln("<div style='background-color: black; font-family: monospace; color: red'>[" + new Date().toISOString() + "][error]" + e.message + "</div>");
 		
