--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/operate/operate.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/operate/operate.html
@@ -5,29 +5,30 @@
 		</div>
 	</div>
 
- 
-    <div class="col-lg-4 col-md-6" ng-repeat="data in operateData">
-        <div class="panel panel-{{ data.color }}">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-3">
-                        <i class="fa fa-{{ data.image }} fa-4x"></i>
-                    </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">{{ data.title }}</div>
-                        <div>{{ data.description }}</div>
-                    </div>
-                </div>
-            </div>
-            <a href="{{ data.path }}">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right fa-2x"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
+	<a ng-repeat="data in operateData" href="{{ data.path }}">
+	    <div class="col-lg-4 col-md-6" >
+	        <div class="panel panel-{{ data.color }}">
+	            <div class="panel-heading">
+	                <div class="row">
+	                    <div class="col-xs-3">
+	                        <i class="fa fa-{{ data.image }} fa-4x"></i>
+	                    </div>
+	                    <div class="col-xs-9 text-right">
+	                        <div class="huge">{{ data.title }}</div>
+	                        <div>{{ data.description }}</div>
+	                    </div>
+	                </div>
+	            </div>
+	            
+	                <div class="panel-footer">
+	                    <span class="pull-left">View Details</span>
+	                    <span class="pull-right"><i class="fa fa-arrow-circle-right fa-2x"></i></span>
+	                    <div class="clearfix"></div>
+	                </div>
+	            
+	        </div>
+	    </div>
+    </a>
     
 	<div class="row">
 	        <div class="col-lg-4 heading-lead page-scroll">
