--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/home/home.html
@@ -30,30 +30,42 @@
     </a>
     
 	<div class="row">
-	        <div class="col-lg-4 heading-lead page-scroll">
+	
+	        <div class="col-lg-3 heading-lead page-scroll">
 				<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-	            <h2><i class="fa fa-question-circle fa-fw"></i>
-                What is Dirigible?</h2>
-	            <p>Dirigible is a cloud development platform providing both development tools and runtime environment. It supports full development life-cycle of on-demand applications by leveraging in-system programming models and rapid application development techniques.</p>
-	            <a class="btn btn-default" href="http://www.dirigible.io/project.html">More Info</a>
+	            <h2><i class="fa fa-edit fa-fw"></i>
+                Develop</h2>
+	            Eclipse Dirigible <sup>&trade;</sup> provides three major types of toolkits covering the Development phase of your solution:
+	            <ul> 
+	            	<li><a href="../index.html">WebIDE</a> - fully functional yet powerful, browser based IDE</li>
+	            	<li><a href="#/workspace">LightIDE</a> - limited code-editing only, browser based IDE</li>
+	            	<li>DesktopIDE - Eclipse based desktop IDE</li>
+	            </ul>
+	            
 	        </div>
-	        <div class="col-lg-4 heading-lead">
+
+	        <div class="col-lg-3 heading-lead">
 				<hr class="section-heading-spacer">
                 <div class="clearfix"></div>
 	            <h2><i class="fa fa fa-search fa-fw"></i>
-                What is it for?</h2>
-	            <p>Dirigible provides capabilities for end-to-end development process from database modeling and management, through RESTful services authoring using various dynamic languages, to pattern-based user interface generation, role based security, external services integration, testing, debugging, operations, and monitoring.</p>
-	            <a class="btn btn-default" href="http://www.dirigible.io/features.html">More Info</a>
+                Discover</h2>
+	            Browse the available source content of the artifacts in the Registry or search for services endpoints in a live Eclipse Dirigible <sup>&trade;</sup> instance. 
 	        </div>
-	        <div class="col-lg-4 heading-lead">
-		<hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-	        <h2><i class="fa fa-github fa-fw"></i>
-                Is it free?</h2>
-	            <p>YES<br>All Dirigible source code and sample applications are licensed under 
-	            <a href="https://www.eclipse.org/legal/epl-v10.html" target="_blank">Eclipse Public License - v 1.0</a>
-	            and maintained at <a href="https://github.com/eclipse/dirigible" target="_blank">GitHub</a>.</p>
-	            <a class="btn btn-default" href="https://github.com/eclipse/dirigible" target="_blank">More Info</a>
+
+	        <div class="col-lg-3 heading-lead">
+				<hr class="section-heading-spacer">
+		        <div class="clearfix"></div>
+		        <h2><i class="fa fa-wrench fa-fw"></i>
+                Operate</h2>
+	            Perform the life-cycle management operations on a live Eclipse Dirigible <sup>&trade;</sup> instance such as Import, Export, Backup and configurations.
 	        </div>
-	    </div>
+	    
+		    <div class="col-lg-3 heading-lead">
+			    <hr class="section-heading-spacer">
+		        <div class="clearfix"></div>
+		        <h2><i class="fa fa-area-chart fa-fw"></i>
+	                Monitor</h2>
+		            Monitor the basic metrics of a live Eclipse Dirigible <sup>&trade;</sup> instance as well as inspect the applications and audit logs.
+		        </div>
+		    </div>
