paging added to entity templates https://bugs.eclipse.org/bugs/show_bug.cgi?id=497898

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/web_content_for_entity/list_and_manage/ui-for-entity-manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/web_content_for_entity/list_and_manage/ui-for-entity-manage.html
@@ -68,6 +68,10 @@
 					</tr>
 				</tbody>
 			</table>
+			<div>
+				<div>View <select ng-model="viewby" ng-change="setItemsPerPage(viewby)"><option>10</option><option>20</option><option>50</option><option selected>100</option></select> records.<div>
+	    		<uib-pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()" class="pagination-sm" items-per-page="itemsPerPage" max-size="maxSize" boundary-links="true" force-ellipses="true" rotate="false"></uib-pagination>
+			</div>
 			<hr>
 			<br>
 			<!-- new, edit and delete buttons -->
@@ -150,9 +154,9 @@
 			var url = '${serviceFileName}';
 
 			$http.get(url)
-			.success(function(data){
-				$scope.data = data;
-			});
+				.success(function(data){
+					$scope.data = data;
+				});
 			
 			$scope.selectedEntry;
             $scope.operation = 'show';
@@ -316,11 +320,40 @@
 #end
 #end
 			
+			
+			//pagination
+			$scope.viewby = 100;
+			var urlCount = url + '?count';
+			$http.get(urlCount)
+				.success(function(count){
+					$scope.totalItems = count;
+				});
+				
+				$scope.currentPage = 1;
+				$scope.itemsPerPage = $scope.viewby;
+				$scope.maxSize = 5;
+			
+			$scope.setPage = function (pageNo) {
+			    $scope.currentPage = pageNo;
+			    $scope.pageChanged();
+			};
+			
+			$scope.pageChanged = function() {
+				var urlLimit = url + '?offset=' + ($scope.viewby*($scope.currentPage-1) + '&limit=' + $scope.viewby);
+				$http.get(urlLimit)
+					.success(function(data){
+						$scope.data = data;
+					});
+			};
+			
+			$scope.setItemsPerPage = function(num) {
+			  	$scope.itemsPerPage = num;
+			  	$scope.setPage(1);
+			}
 		});
 		
 	</script>
-	<!-- Bootstrap core JavaScript
-	  ================================================== -->
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script>
