--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/terminal.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.ui/resources/ui/templates/monitoring/logging/terminal.html
@@ -1,52 +1,71 @@
-<html>
-<head>
-<style>
-	body {
-	    background-color: black;
-	    color: #44EE44;
-	    font-family: monospace;
-	}
-</style>
-</head>
-<body onload="connectToTerminal(terminalSocket)">
+
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="utf-8" />
+    <title>Eclipse Dirigible Terminal Emulator</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="js/jquery.terminal.min.js"></script>
+    <link href="css/jquery.terminal.css" rel="stylesheet"/>
+  </head>
+<body onload="connectToTerminal()">
+
 <script>
+
 window.terminalSocket = null;
-var connectToTerminal = function(terminalSocket) {
 
+var connectToTerminal = function() {
 	try {
-		if (window.terminalSocket === null) {
+		if (window.terminalSocket === null
+		|| window.terminalSocket.readyState !== window.terminalSocket.OPEN) {
 			window.terminalSocket = new WebSocket(((location.protocol === 'https:') ? "wss://" : "ws://") 
-					+ window.location.host + "/terminal");
-					
-			document.writeln("<div style='background-color: black; font-family: monospace;'>\
-				<input id=\"command\" type=\"text\" style='background-color: black; font-family: monospace; color: #44EE44' onkeydown=\"onCommand(event)\" /></div>");
-				
+					+ window.location.host + "/terminal");	
 		}
-
 
 	} catch(e) {
-		document.writeln("<div style='background-color: black; font-family: monospace; color: red'>[" + new Date().toISOString() + "][error]" + e.message + "</div>");
+		console.error(e.message);
 	}
-	
-	window.terminalSocket.onmessage = function (message) {
-		var color = "#44EE44";
-		if (message.data.startsWith("[error]")) {
-			color = "red";
-		}
-
-		document.writeln("<div style='background-color: black; font-family: monospace; color: " + color + "'>" + message.data + "</div>");
-	};
-	
 }
 
-var onCommand = function(event) {
-	if(event.keyCode == 13){
-        window.terminalSocket.send(document.getElementById('command').value + "\n");
-    }
-	
-}
+jQuery(document).ready(function($) {
+    $('body').terminal(function(command, term) {
+        
+                term.pause();
+                
+                connectToTerminal();
+				
+				window.terminalSocket.onmessage = function (message) {
+					term.resume();
+                    term.echo(message.data);
+				};
 
+				var waits = 0;
+				while (!window.terminalSocket.OPEN) {
+					setTimeout('', 1000);
+					waits++;
+					if (waits > 10) {
+						break;
+					}
+
+				}
+				
+				try {
+					if (command.trim() !== "") {
+                		window.terminalSocket.send(command + "\n");
+            		}
+            	} catch(e) {
+            		console.error(e.message);
+        		}
+
+       
+    }, {
+        greetings: new Date().toString() + "\nUse ^C to stop the process",
+        onBlur: function() {
+            // prevent loosing focus
+            return false;
+        }
+    });
+});
 
 </script>
 </body>
-</html>
