--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/styles/main.css
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/styles/main.css
@@ -8,11 +8,15 @@ iframe {
 .list-group-item {
   cursor: pointer;
 }
+
+/*
 .badge-right {
   float: left !important;
   margin-right: 5px;
 }
 
+
 .badge-clean {
   background-color: transparent;
 }
+*/
