registry ui updates

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/templates/monitoring/logging/log.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/templates/monitoring/logging/log.html
@@ -29,7 +29,7 @@ var connectToLog = function() {
 		window.location.hash = "#" + id;				
 	};
 	
-	setInterval(clear, 600000);
+	setInterval(clear, 6000000);
 }
 
 var clear = function() {
